       ============================================
 Developed and maintained by Matthias Ettrich (ettrich@kde.org)


kwm (since 0.10) was almost rewritten from scratch in C++.  Many ideas
and some code went in from David Hogan's 9wm, a smart and small
windowmanager written in plain C. There are of course also strong
influences from my experiences with the former kwm.


In 0.10:
--------
  patchlevel 17:
       - fixed a serious bug (crashing clients when dragging in 
         opaque mode)
       - tiny fix for gravity handling
       - *many* modifications to autoraise
       - fix for FocusFollowMouse
       - animation a bit faster
       - small fix for resize/move with the mouse 
       - works together with newest kfm to keep the root icons 
         lowered
       - small fix for setting the kwm_running property
       - fixed a very old bug: now you can press Control-F1
         Control-F2 Control-F1 Control-F2 Control-F1 Control-F2
         like a maniac without any windows loosing their frames :-)
       - kURL-completion (Torben Weis, Henner Zeller)
       - fixed a bug that menu-button-click sometimes closes a window

  patchlevel 16:
       - fix for "move" via keyboard (pointer warp)
       - autoraise fixes
       - fixed the "kwm needs cpu when dragging windows" bug
       - ontoDesktop also moves the transient windows
       - transient windows cannot be moved onto different desktops
         separately anymore
       - transient windows cannot be iconified separately anymore
       - few smaller fixes

       - cosmectic problem with my pushbuttons fixed
       - sticky cares about transient windows now

       - fix for proxyignore
       - window dragging fixed (problems with some compilers)

  patchlevel 15:
       - transient windows are iconified/deiconified with their parent
         window. They also dissappear for the modules and the Mod1-Tab
         traversal if they were automatically iconified.