@@ -12,6 +12,10 @@ influences from my experiences with the former kwm.
 
 In 0.10:
 --------
+  patchlevel 18:
+       - transient windows become iconified if the main window loses
+         the focus (and none of its transient gets it instead!)
+
   patchlevel 17:
        - fixed a serious bug (crashing clients when dragging in 
          opaque mode)
